--- a/index.html
+++ b/index.html
@@ -2,12 +2,36 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Innovative Problem Solutions</title>
+    <link rel="stylesheet" href="assets/css/normalize.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	
-
+	<section class="navigation">
+        <div class="nav-container">
+            <div class="brand"><a href="#!">Innovative Problem Solutions</a>
+            </div>
+                <nav>
+                    <div class="nav-mobile">
+                        <a href="#!" id="nav-toggle"><span></span></a>
+                    </div>
+                    <ul class="nav-list">
+                        <li><a href="#!">Products</a>
+                            <ul class="nav-dropdown">
+                                <li><a href="#!">Product A</a></li>
+                                <li><a href="#!">Product B</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#!">Contact</a></li>
+                    </ul>
+                </nav>
+        </div>
+    </section>
+    
+    
+    <script src="assets/js/jquery-3.2.1.min.js"></script>
+    <script src="assets/js/navbar.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
