Landing page added, background cogs added

--- a/index.html
+++ b/index.html
@@ -1,58 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Innovative Problem Solutions</title>
-    <link rel="stylesheet" href="assets/css/normalize.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-	<section class="navigation">
-        <div class="nav-container">
-            <div class="brand"><a href="#!">Innovative Problem Solutions</a>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Innovative Problem Solutions</title>
+        <link rel="stylesheet" href="assets/css/normalize.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
+    </head>
+    <body>
+        <section class="navigation">
+            <div class="nav-container">
+                <div class="brand"><a href="#!">Innovative Problem Solutions</a>
             </div>
-                <nav>
-                    <div class="nav-mobile">
-                        <a href="#!" id="nav-toggle"><span></span></a>
-                    </div>
-                    <ul class="nav-list">
-                        <li><a href="#!">Products</a>
-                            <ul class="nav-dropdown">
-                                <li><a href="#!">Product A</a></li>
-                                <li><a href="#!">Product B</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#!">Contact</a></li>
+            <nav>
+                <div class="nav-mobile">
+                    <a href="#!" id="nav-toggle"><span></span></a>
+                </div>
+                <ul class="nav-list">
+                    <li><a href="#!">Products</a>
+                    <ul class="nav-dropdown">
+                        <li><a href="#!">Product A</a></li>
+                        <li><a href="#!">Product B</a></li>
                     </ul>
-                </nav>
-        </div>
-    </section>
+                </li>
+                <li><a href="#!">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</section>
+<div class="landing-area-container">
+    <a href="#content">
+        <h1>Innovative Problem Solutions <br>
+        <i id="arrow" class="icon-down-big"></i>
+        </h1>
+    </a>
+    <ul class="circle-container">
+        <li><img src="assets/media/patent_icon_1.svg" alt=""></li>
+        <li><img src="assets/media/patent_icon_2.svg" alt=""></li>
+        <li><img src="assets/media/patent_icon_3.svg" alt=""></li>
+        <li><img src="assets/media/patent_icon_4.svg" alt=""></li>
+        <li><img src="assets/media/patent_icon_5.svg" alt=""></li>
+    </ul>
+</div>
 
-    <section class="content">
-        <p>
-            Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
-        </p>
-        <p>
-            Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
-        </p>
-        <p>
-            Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
-        </p>
-        <p>
-            Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
-        </p>
-        <p>
-            Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
-        </p>
-        <p>
-            Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
-        </p>
-    </section>
-    
-    
-    <script src="assets/js/jquery-3.2.1.min.js"></script>
-    <script src="assets/js/navbar.js"></script>
-	<script src="assets/js/main.js"></script>
+<section id="content" class="content">
+    <p>
+        Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
+    </p>
+    <p>
+        Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
+    </p>
+    <p>
+        Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
+    </p>
+    <p>
+        Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
+    </p>
+    <p>
+        Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
+    </p>
+    <p>
+        Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
+    </p>
+</section>
+
+
+<script src="assets/js/jquery-3.2.1.min.js"></script>
+<script src="assets/js/navbar.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
