More mobile breakpoints added, landing color changed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <section class="navigation">
             <div class="nav-container">
-                <div class="brand"><a href="#!">Innovative Problem Solutions</a>
+                <div class="brand"><a href="#landing-area-container">Innovative Problem Solutions</a>
             </div>
             <nav>
                 <div class="nav-mobile">
@@ -29,18 +29,19 @@
         </nav>
     </div>
 </section>
-<div class="landing-area-container">
+<div id="landing-area-container" class="landing-area-container">
     <a href="#content">
         <h1>Innovative Problem Solutions <br>
         <i id="arrow" class="icon-down-big"></i>
         </h1>
     </a>
     <ul class="circle-container">
-        <li><img src="assets/media/patent_icon_1.svg" alt=""></li>
-        <li><img src="assets/media/patent_icon_2.svg" alt=""></li>
-        <li><img src="assets/media/patent_icon_3.svg" alt=""></li>
-        <li><img src="assets/media/patent_icon_4.svg" alt=""></li>
-        <li><img src="assets/media/patent_icon_5.svg" alt=""></li>
+        <li><img class="svg" src="assets/media/patent_icon_1.svg" alt=""></li>
+        <li><img class="svg" src="assets/media/patent_icon_2.svg" alt=""></li>
+        <li><img class="svg" src="assets/media/patent_icon_3.svg" alt=""></li>
+        <li><img class="svg" src="assets/media/patent_icon_4.svg" alt=""></li>
+        <li><img class="svg" src="assets/media/patent_icon_5.svg" alt=""></li>
+        <li></li>
     </ul>
 </div>
 
