Font family added, button styling added

--- a/index.html
+++ b/index.html
@@ -55,11 +55,14 @@
 </section>
 
 <section id="products">
-    <h3 class="text-center underline">Product Showcase</h3>
+    <div>
+        <h3 class="text-center underline">Product Showcase</h3>
+    </div>
+    
     <div class="product-container">
         <div class="product">
             <img src="assets/media/IPSCS0700.gif" alt="">
-            <div>
+            <div class="text-center">
             <h3 class="text-center">Straight Cargo System 700</h3>
             <p class="text-center">Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket.</p>
             <button class="learn-more-btn">Learn More</button>
@@ -68,7 +71,7 @@
 
         <div class="product">
             <img src="assets/media/IPSCS0800.gif" alt="">
-            <div>
+            <div class="text-center">
             <h3 class="text-center">Straight Cargo System 800</h3>
             <p class="text-center">Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket.</p>
             <button class="learn-more-btn">Learn More</button>
@@ -76,25 +79,8 @@
         </div>
     </div>
 </section>
-<section id="content" class="content">
-    <p>
-        Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
-    </p>
-    <p>
-        Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
-    </p>
-    <p>
-        Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
-    </p>
-    <p>
-        Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
-    </p>
-    <p>
-        Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
-    </p>
-    <p>
-        Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin. Tenderloin pork loin bresaola pork chop tri-tip ribeye short loin prosciutto salami strip steak ham chuck turducken. Brisket pork belly ribeye ground round jowl pastrami swine turkey.
-    </p>
+<section class="footer">
+    <p>Footer text if needed</p>
 </section>
 <script src="assets/js/jquery-3.2.1.min.js"></script>
 <script src="assets/js/navbar.js"></script>
