Trying some box shadowing

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     
     <div>
-        <p>Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket. Beef pig bresaola venison rump ham hock. Alcatra sirloin strip steak ground round chuck porchetta hamburger swine. Landjaeger swine boudin tail bacon short ribs pork loin leberkas ground round kielbasa alcatra kevin. Drumstick porchetta venison pork hamburger jowl tongue leberkas pig filet mignon pork loin.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non sapien a sem cursus semper. Mauris et sodales magna, quis rhoncus elit. Maecenas hendrerit pulvinar mauris nec tincidunt. Praesent est odio, consectetur ac turpis eu, vestibulum dignissim velit. Nam cursus dapibus dui. Nulla blandit et orci id ullamcorper. Praesent non lectus risus. Donec ac magna vel ligula porta maximus quis efficitur justo. Fusce tristique sapien eu est tristique pharetra. Aliquam viverra a est a accumsan. Maecenas a congue velit, sed fermentum eros.</p>
     </div>
 </section>
 
@@ -64,7 +64,7 @@
             <img src="assets/media/IPSCS0700.gif" alt="">
             <div class="text-center">
             <h3 class="text-center">Straight Cargo System 700</h3>
-            <p class="text-center">Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket.</p>
+            <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non sapien a sem cursus semper. Mauris et sodales magna, quis rhoncus elit. Maecenas hendrerit pulvinar mauris nec tincidunt. Praesent est odio, consectetur ac turpis eu, vestibulum dignissim velit.</p>
             <button class="learn-more-btn">Learn More</button>
             </div>
         </div>
@@ -73,7 +73,7 @@
             <img src="assets/media/IPSCS0800.gif" alt="">
             <div class="text-center">
             <h3 class="text-center">Straight Cargo System 800</h3>
-            <p class="text-center">Spicy jalapeno bacon ipsum dolor amet picanha meatball ham, tail swine bacon kielbasa sirloin landjaeger frankfurter shankle short loin pork loin turkey brisket.</p>
+            <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non sapien a sem cursus semper. Mauris et sodales magna, quis rhoncus elit. Maecenas hendrerit pulvinar mauris nec tincidunt. Praesent est odio, consectetur ac turpis eu, vestibulum dignissim velit.</p>
             <button class="learn-more-btn">Learn More</button>
             </div>
         </div>
