About and footer removed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 </section>
 <div id="landing-area-container" class="landing-area-container">
-    <a href="#about">
+    <a href="#products">
         <h1>Innovative Problem Solutions <br>
         <i id="arrow" class="icon-down-big"></i>
         </h1>
@@ -44,15 +44,6 @@
         <li></li>
     </ul>
 </div>
-<section id="about" class="content">
-    <div>
-        <h3 class="text-center underline">About</h3>
-    </div>
-    
-    <div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non sapien a sem cursus semper. Mauris et sodales magna, quis rhoncus elit. Maecenas hendrerit pulvinar mauris nec tincidunt. Praesent est odio, consectetur ac turpis eu, vestibulum dignissim velit. Nam cursus dapibus dui. Nulla blandit et orci id ullamcorper. Praesent non lectus risus. Donec ac magna vel ligula porta maximus quis efficitur justo. Fusce tristique sapien eu est tristique pharetra. Aliquam viverra a est a accumsan. Maecenas a congue velit, sed fermentum eros.</p>
-    </div>
-</section>
 
 <section id="products">
     <div>
@@ -78,9 +69,6 @@
             </div>
         </div>
     </div>
-</section>
-<section class="footer">
-    <p>Footer text if needed</p>
 </section>
 <script src="assets/js/jquery-3.2.1.min.js"></script>
 <script src="assets/js/navbar.js"></script>
