Basic revised layout

--- a/index.html
+++ b/index.html
@@ -30,19 +30,36 @@
     </div>
 </section>
 <div id="landing-area-container" class="landing-area-container">
-    <a href="#products">
+    <!-- <a href="#products">
         <h1>Innovative Problem Solutions <br>
         <i id="arrow" class="icon-down-big"></i>
         </h1>
-    </a>
-    <ul class="circle-container">
-        <li><img class="svg" src="assets/media/patent_icon_1.svg" alt=""></li>
-        <li><img class="svg" src="assets/media/patent_icon_2.svg" alt=""></li>
-        <li><img class="svg" src="assets/media/patent_icon_3.svg" alt=""></li>
-        <li><img class="svg" src="assets/media/patent_icon_4.svg" alt=""></li>
-        <li><img class="svg" src="assets/media/patent_icon_5.svg" alt=""></li>
-        <li></li>
-    </ul>
+    </a> -->
+    <div class="row1">
+        <div><img src="assets/media/green_unstable.png" alt=""></div>
+        <div><img src="assets/media/patent_icon13.svg" alt=""></div>
+        <div><img src="assets/media/patent_icon12.svg" alt=""></div>
+        <div><img src="assets/media/red_unstable.png" alt=""></div>
+    </div>
+
+    <div class="row2">
+        <div><img src="assets/media/patent_icon_1.svg" alt=""></div>
+        <div><a href="#products"><div class="heading-container"><h1>Innovative Problem Solutions <br> <i id="arrow" class="icon-down-big"></i></h1></div></a></div>
+        <div><img src="assets/media/patent_icon_3.svg" alt=""></div>
+    </div>
+
+    <div class="row3">
+        <div></div>
+        <div><img src="assets/media/patent_icon8.svg" alt=""></div>
+        <div><img src="assets/media/patent_icon_2.svg" alt=""></div>
+        <div></div>
+    </div>
+
+    <div class="row4">
+        <div><img src="assets/media/green_stable.png" alt=""></div>
+        <div><img src="assets/media/patent_icon_4.svg" alt=""></div>
+        <div><img src="assets/media/red_stable.png" alt=""></div>
+    </div>
 </div>
 
 <section id="products">
