--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Innovative Problem Solutions</title>
-        <link rel="stylesheet" href="assets/css/normalize.css">
+        <!-- <link rel="stylesheet" href="assets/css/normalize.css"> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css" >
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
     </head>
@@ -35,31 +36,38 @@
         <i id="arrow" class="icon-down-big"></i>
         </h1>
     </a> -->
-    <div class="row1">
-        <div><img src="assets/media/green_unstable.png" alt=""></div>
-        <div><img src="assets/media/patent_icon13.svg" alt=""></div>
-        <div><img src="assets/media/patent_icon12.svg" alt=""></div>
-        <div><img src="assets/media/red_unstable.png" alt=""></div>
+
+    <div class="wrap text-center">
+        <div class="row">
+            <div class="col-md-3"><img src="assets/media/green_unstable.png" alt=""></div>
+            <div class="col-md-3"><img src="assets/media/patent_icon13.svg" alt=""></div>
+            <div class="col-md-3"><img src="assets/media/patent_icon12.svg" alt=""></div>
+            <div class="col-md-3"><img src="assets/media/red_unstable.png" alt=""></div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-2 v-center"><img src="assets/media/patent_icon_1.svg" alt=""></div>
+            <div class="col-md-4 v-center"><a class="landing-area-brand" href="#products"><div><h1>Innovative Problem Solutions <br> <i id="arrow" class="icon-down-big"></i></h1></div></a></div>
+            <div class="col-md-2 v-center"><img src="assets/media/patent_icon_3.svg" alt=""></div>
+            <div class="col-md-2"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-2 v-center"><img src="assets/media/patent_icon8.svg" alt=""></div>
+            <div class="col-md-2 v-center"><img src="assets/media/patent_icon_2.svg" alt=""></div>
+            <div class="col-md-4"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4"><img src="assets/media/green_stable.png" alt=""></div>
+            <div class="col-md-4"><img src="assets/media/patent_icon_4.svg" alt=""></div>
+            <div class="col-md-4"><img src="assets/media/red_stable.png" alt=""></div>
+        </div>
     </div>
 
-    <div class="row2">
-        <div><img src="assets/media/patent_icon_1.svg" alt=""></div>
-        <div><a href="#products"><div class="heading-container"><h1>Innovative Problem Solutions <br> <i id="arrow" class="icon-down-big"></i></h1></div></a></div>
-        <div><img src="assets/media/patent_icon_3.svg" alt=""></div>
-    </div>
-
-    <div class="row3">
-        <div></div>
-        <div><img src="assets/media/patent_icon8.svg" alt=""></div>
-        <div><img src="assets/media/patent_icon_2.svg" alt=""></div>
-        <div></div>
-    </div>
-
-    <div class="row4">
-        <div><img src="assets/media/green_stable.png" alt=""></div>
-        <div><img src="assets/media/patent_icon_4.svg" alt=""></div>
-        <div><img src="assets/media/red_stable.png" alt=""></div>
-    </div>
+    
 </div>
 
 <section id="products">
