--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
     <div class="wrap text-center">
         <div class="row">
-            <div class="col-md-3"><img src="assets/media/green_unstable.png" alt=""></div>
+            <div class="col-md-3 x-across"><img src="assets/media/green_unstable.png" alt=""></div>
             <div class="col-md-3"><img src="assets/media/patent_icon13.svg" alt=""></div>
             <div class="col-md-3"><img src="assets/media/patent_icon12.svg" alt=""></div>
-            <div class="col-md-3"><img src="assets/media/red_unstable.png" alt=""></div>
+            <div class="col-md-3 x-across"><img src="assets/media/red_unstable.png" alt=""></div>
         </div>
 
         <div class="row">
@@ -61,9 +61,9 @@
         </div>
 
         <div class="row">
-            <div class="col-md-4"><img src="assets/media/green_stable.png" alt=""></div>
-            <div class="col-md-4"><img src="assets/media/patent_icon_4.svg" alt=""></div>
-            <div class="col-md-4"><img src="assets/media/red_stable.png" alt=""></div>
+            <div class="col-md-3"><img src="assets/media/green_stable.png" alt=""></div>
+            <div class="col-md-6"><img src="assets/media/patent_icon_4.svg" alt=""></div>
+            <div class="col-md-3"><img src="assets/media/red_stable.png" alt=""></div>
         </div>
     </div>
 
