Updated mobile landing page working

--- a/index.html
+++ b/index.html
@@ -39,31 +39,43 @@
 
     <div class="wrap text-center">
         <div class="row">
-            <div class="col-md-3 x-across"><img src="assets/media/green_unstable.png" alt=""></div>
-            <div class="col-md-3"><img src="assets/media/patent_icon13.svg" alt=""></div>
-            <div class="col-md-3"><img src="assets/media/patent_icon12.svg" alt=""></div>
-            <div class="col-md-3 x-across"><img src="assets/media/red_unstable.png" alt=""></div>
+            <div class="col-md-3 col-sm-3 x-across"><img src="assets/media/green_unstable.png" alt=""></div>
+            <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon13.svg" alt=""></div>
+            <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon12.svg" alt=""></div>
+            <div class="col-md-3 col-sm-3 x-across"><img src="assets/media/red_unstable.png" alt=""></div>
         </div>
 
         <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-2 v-center"><img src="assets/media/patent_icon_1.svg" alt=""></div>
-            <div class="col-md-4 v-center"><a class="landing-area-brand" href="#products"><div><h1>Innovative Problem Solutions <br> <i id="arrow" class="icon-down-big"></i></h1></div></a></div>
-            <div class="col-md-2 v-center"><img src="assets/media/patent_icon_3.svg" alt=""></div>
-            <div class="col-md-2"></div>
+            <div class="col-md-2 col-sm-2"></div>
+            <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_1.svg" alt=""></div>
+            <div class="col-md-4 col-sm-4 v-center"><a class="landing-area-brand" href="#products"><div><h1>Innovative Problem Solutions <br> <i id="arrow" class="icon-down-big"></i></h1></div></a></div>
+            <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_3.svg" alt=""></div>
+            <div class="col-md-2 col-sm-2"></div>
         </div>
 
         <div class="row">
-            <div class="col-md-4"></div>
-            <div class="col-md-2 v-center"><img src="assets/media/patent_icon8.svg" alt=""></div>
-            <div class="col-md-2 v-center"><img src="assets/media/patent_icon_2.svg" alt=""></div>
-            <div class="col-md-4"></div>
+            <div class="col-md-4 col-sm-4"></div>
+            <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon8.svg" alt=""></div>
+            <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_2.svg" alt=""></div>
+            <div class="col-md-4 col-sm-4"></div>
         </div>
 
         <div class="row">
-            <div class="col-md-3"><img src="assets/media/green_stable.png" alt=""></div>
-            <div class="col-md-6"><img src="assets/media/patent_icon_4.svg" alt=""></div>
-            <div class="col-md-3"><img src="assets/media/red_stable.png" alt=""></div>
+            <div class="col-md-3 col-sm-3"><img src="assets/media/green_stable.png" alt=""></div>
+            <div class="col-md-6 col-sm-6"><img src="assets/media/patent_icon_4.svg" alt=""></div>
+            <div class="col-md-3 col-sm-3"><img src="assets/media/red_stable.png" alt=""></div>
+        </div>
+    </div>
+
+    <div class="mobile-wrap text-center">
+        <div class="row">
+            <div class="col-xs-12"><img src="assets/media/mobile_icon_1.png"></div>
+        </div>
+        <div class="row">
+            <a class="landing-area-brand" href="#products"><div class="col-xs-12 v-center"><h1>Innovative Problem Solutions <br> <i id="arrow" class="icon-down-big"></i></h1></div></a>
+        </div>
+        <div class="row">
+            <div class="col-xs-12"><img src="assets/media/mobile_icon_2.png"></div>
         </div>
     </div>
 
